testdata/asm/invalid/fncall_invalid_01.lisp
;;
(defcolumns (X :i16) (Y :i16))
(defcall (Y) add (X))
